# sr-contrib

sr_arm_kinematics/launch/: sr_arm_kinematics_standalone.launch
sr_contrib/: CMakeLists.txt  package.xml
sr_hand_kinematics/hand_kinematics/: CMakeLists.txt  package.xml
sr_hand_kinematics/hand_kinematics/launch/: hand_kinematics_standalone.launch
sr_hand_kinematics/hand_kinematics/src/: hand_kinematics_coupling.cpp  hand_kinematics_coupling_plugin.cpp  hand_kinematics_utils.cpp
sr_hand_kinematics/hand_kinematics/test/: test_kinematics_as_plugin.cpp  test_kinematics_as_service.cpp
sr_hand_kinematics/kdl_coupling/: CMakeLists.txt
sr_hand_kinematics/kdl_coupling/src/: chainiksolverpos_nr_jl_coupling.cpp  (+2 more)
sr_moveit_hand_config/: .setup_assistant  README.md  package.xml
sr_moveit_hand_config/config/: controllers.yaml  kinematics.yaml  kinematics_template.yaml  ompl_planning_template.yaml  shadowhand.srdf.xacro  shadowhand_motor.srdf  shadowhands.srdf.xacro  shadowhands.xacro.srdf  shadowhands_prefix.srdf.xacro  shadowhands_prefix.xacro.srdf
sr_moveit_hand_config/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  run_benchmark_ompl.launch  shadowhand_motor_moveit_controller_manager.launch.xml  test_gen.launch  test_gen_prefix.launch  test_load.launch  test_load_prefix.launch  trajectory_execution.launch.xml
sr_moveit_hand_config/scripts/: generate_load_moveit_config.py  generate_moveit_config.py  generate_srdf.py
(+3 files in other folders)
